# HenryLaserTurret

./: .gitignore  .gitmodules  README.md  setup.sh  train.sh
ai_training/: .gitignore  setup.sh  verify.sh  yolo.cfg
henry_turret_control/: CMakeLists.txt  package.xml
henry_turret_control/scripts/: henry_targeter.py
henry_turret_description/: CMakeLists.txt  package.xml
henry_turret_description/launch/: display.launch  display_offline.launch
henry_turret_description/meshes/: LaserMount.blend  LaserMount.stl  NedZed.blend  NedZed.stl  lp.blend  lp.dae
henry_turret_description/rviz/: ned.rviz
henry_turret_description/urdf/: henry_turret_description.urdf.xacro
henry_turret_detection/: CMakeLists.txt  README.md  package.xml
henry_turret_detection/scripts/: henry_detector.py
