<?xml version="1.0"?>
<package format="2">
  <name>henry_turret_control</name>
  <version>0.0.0</version>
  <description>The henry_turret_control package</description>

  <maintainer email="davesarmoury@gmail.com">Dave Niewinski</maintainer>

  <license>CC-BY-3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>trac_ik_kinematics_plugin</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
</package>
